# storycraft

./: .gitignore  README.md  example_brief.json  pyproject.toml
docs/: README.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md
docs/design/: DATA_MODEL.md  LLM_INTEGRATION.md  PIPELINE.md  WORKSPACE_AND_RECOVERY.md  configuration_contracts.md  context_contracts.md  data_contract_examples.md  implementation_acceptance.md  ledger_contracts.md  next_generation_design.md  next_generation_flow.md  pipeline_contracts.md  prompt_template_design.md  runtime_and_recovery.md  series_engine_design.md  series_engine_flow.md  workspace_layout.md
docs/product/: IMPLEMENTATION_STATUS.md  ORIGIN_AND_REQUIREMENTS.md  REQUIREMENTS.md  SPECIFICATION.md
docs/testing/: ACCEPTANCE.md
scripts/: wheel_smoke.sh
src/storycraft/: __init__.py  chapter_plan_stage.py  cli.py  config.py  diversity.py  ids.py  initial_accept_stage.py  initial_characters_stage.py  initial_concept_stage.py  initial_ending_stage.py  initial_generation.py  initial_integrate_stage.py  initial_knowledge_stage.py  initial_relationships_stage.py  initial_threads_stage.py  initial_world_stage.py  input_stage.py  llm.py  log.py  nextgen.py  nextgen_model.py  output.py  pipeline.py  prompt_template.py  prompts.py  reviewed_candidate_stage.py  (+19 more)
tests/: test_brief_and_volume_map_contracts.py  test_brief_schema_v1.py  test_chapter_plan_schema_v1.py  test_chapter_plan_stage_v1.py  test_config.py  test_initial_accept_stage_v1.py  test_initial_characters_schema_v1.py  test_initial_characters_stage_v1.py  test_initial_concept_schema_v1.py  test_initial_concept_stage_v1.py  test_initial_ending_schema_v1.py  test_initial_ending_stage_v1.py  test_initial_generation_v1.py  test_initial_integrate_schema_v1.py  test_initial_integrate_stage_v1.py  test_initial_knowledge_schema_v1.py  test_initial_knowledge_stage_v1.py  test_initial_relationships_schema_v1.py  test_initial_relationships_stage_v1.py  test_initial_threads_schema_v1.py  test_initial_threads_stage_v1.py  test_initial_world_schema_v1.py  test_initial_world_stage_v1.py  test_input_stage_v1.py  test_llm_raw_logs.py  test_nextgen_flow.py  test_nextgen_model_templates.py  test_nextgen_state_contracts.py  test_run_integration.py  test_run_state_v1.py  test_scene_card_schema_v1.py  test_scene_card_stage_v1.py  test_scene_continuity_stage_v1.py  test_scene_plan_schema_v1.py  test_scene_plan_stage_v1.py  test_scene_prose_model_v1.py  test_scene_prose_stage_v1.py  test_series_engine_api.py  test_series_engine_flow.py  test_series_engine_state_contracts.py  (+8 more)
(+273 files in other folders)
