[project]
name = "storycraft"
version = "0.1.0"
description = "LLMで日本語小説シリーズを最後まで書き切る道具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "openai>=1.50",
    "pyyaml>=6.0",
]

[project.scripts]
storycraft = "storycraft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storycraft"]

[tool.hatch.build.targets.wheel.force-include]
"templates/prompts" = "storycraft/templates/prompts"
